test: Handle new severity levels CY-4851

--- a/src/main/resources/docs/tests/block-closing-brace-newline-after.css
+++ b/src/main/resources/docs/tests/block-closing-brace-newline-after.css
@@ -2,7 +2,7 @@
 
 a {
     color: pink;
-    /*#Err: block-closing-brace-newline-after*/
+    /*#Info: block-closing-brace-newline-after*/
 }  b {
     color: red;
 }
