--- a/src/main/resources/docs/tests/indentation.less
+++ b/src/main/resources/docs/tests/indentation.less
@@ -1,5 +1,5 @@
 /*#Patterns: indentation : {"indentation":"100"}*/
-/*#Issue: {"severity": "Err", "line": 5, "patternId": "indentation"}*/
+/*#Issue: {"severity": "Info", "line": 5, "patternId": "indentation"}*/
 
 p {
   color: blue;
