--- a/src/main/resources/docs/tests/selector-list-comma-newline-after.scss
+++ b/src/main/resources/docs/tests/selector-list-comma-newline-after.scss
@@ -1,6 +1,6 @@
 /*#Patterns: selector-list-comma-newline-after : {"selector-list-comma-newline-after" : "always"}*/
 
-/*#Err: selector-list-comma-newline-after*/
+/*#Info: selector-list-comma-newline-after*/
 a, b {
   color: pink;
 }
